@@ -1,3 +1,15 @@
+Tue Aug 7 04:06:48 EDT 2007 J Phelps <godless@users.sf.net>
+	* simple_edit_effects.(cpp|h), edit_effect.h: Altered the
+	indentation style. Changed all p_begin and p_end arguments to
+	type ptrdiff_t to get rid of "comparison between signed and
+	unsigned" warnings, which I have found to be a source of
+	bugs.
+	
+	Edit_Effect_PreLoop_Cut::process: The loop pointers are
+	adjusted before the truncate(), because otherwise,
+	truncate() does some adjustments of its own which
+	cause the loop to end up having Start:End positions
+	0:1.
 Mon Aug 6 22:54:33 EDT 2007 J Phelps <godless@users.sf.net>
 	* interface.cpp(eventFilter): Imposed my intentation style on
 	the entire file. Also fixed another old bug: eventFilter()
